  appeared in 2.4.10, replacing the same problem with ?Gradient
  MenuFaces in 2.4.9.

* Fixed accidental menu animation with certain menu position hints.

* Increased maximum allowed key symbol name length to 200
  characters.

* Allow quotes in conditional command conditions.

* Fixed starting Move at random position when pointer is on a
  different screen.

-------------------------------------------------------------------

Changes in stable release 2.4.11 (20-Sep-2002)

* Allow the use of mouse buttons other than the first in
  FvwmWinList when invoked transient.

* Fixed a crash with ssh-askpass introduced in 2.4.10.

-------------------------------------------------------------------

Changes in stable release 2.4.10 (15-Sep-2002)

* The commands Maximize, Resize and ResizeMove can be used on icons
  as it was in 2.2.x.

* Fixed hilighting of menu items with HGradient and VGradient
  MenuFace.  Reduced flickering with these options.

* Fixed a minor problem with entering submenus via keyboard.

* Fixed race conditions in FvwmTaskBar with AutoStick that caused
  it to hang.

* Fixed drawing of pager balloons with BalloonBack option.

* Fixed drawing of SidePic menu background with B/D gradients.

* Fixed drawing of menu item reliefs with gradient menu faces.

* Fixed key bindings on window corners.

* Fixed FvwmTaskBar i18n font loading

* Fixed StackTransientParent style without RaiseTransient or
  LowerTransient on the parent window.

* StackTransientParent works only on parent window if it is on the
  same layer.

* Fixed handling of window group hint with the (De)Iconify
  command.

* No more flickering when a transient overlapping its parent window
  is lowered.

* Fixed hilighting of unfocused windows.

-------------------------------------------------------------------

Changes in stable release 2.4.9 (11-Aug-2002)

* Fixed interaction bug between CascadePlacement and StartsOnPage -
  if the target page was at a negative x or y page displacement