@@ -1,3 +1,13 @@
+2002-10-10  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmIconMan/FvwmIconMan.1:
+	documented that the default resoulution is page, not global
+	corrected "id" syntax
+
+	* FvwmIconMan/xmanager.c (check_in_window):
+	* FvwmIconMan/fvwm.c (new_window):
+	transient windows no longer appear in FvwmIconMan when they are moved
+
 2002-09-17  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmWinList/FvwmWinList.c (LoopOnEvents):
